Fixed a bug with too long strings in descriptions. Fixed a bug with expand/collapse buttons.

--- a/css/style.css
+++ b/css/style.css
@@ -309,6 +309,13 @@ div.check-form {
     padding:8px 10px 8px 10px;
 }
 
+.check-form td.text .limiter,
+.solution-content,
+.result-content {
+    word-wrap:break-word;
+    width:400px;
+}
+
 .check-form,
 .check-form tbody tr:hover td,
 .check-form tbody tr:hover th {
